--- a/ansible/roles/kubernetes-packages/tasks/main.yaml
+++ b/ansible/roles/kubernetes-packages/tasks/main.yaml
@@ -7,7 +7,7 @@
 - name: adding Kubernetes deb repository
   become: yes
   apt_repository:
-    repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
+    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
     state: present
     filename: kubernetes
 
@@ -15,15 +15,15 @@
   become: yes
   apt:
     pkg:
-      - "kubeadm={{ kubernetes.apt_version }}"
-      - "kubectl={{ kubernetes.apt_version }}"
-      - "kubelet={{ kubernetes.apt_version }}"
+      - 'kubeadm={{ kubernetes.apt_version }}'
+      - 'kubectl={{ kubernetes.apt_version }}'
+      - 'kubelet={{ kubernetes.apt_version }}'
     update_cache: yes
 
 - name: hold kubeadm, kubectl, kubelet
   become: yes
   dpkg_selections:
-    name: "{{ item }}"
+    name: '{{ item }}'
     selection: hold
   with_items:
     - kubeadm
